correcion de nombre de paquete

--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "reddatasrd/NumTostring",
+    "name": "reddatasrd/numtostring",
     "description": "Comvertit de numero a letra.",
     "type": "library",
     "license": "mit",
